# grpc-java

./: java_grpc_library.bzl
api/: BUILD.bazel
context/: BUILD.bazel
core/: BUILD.bazel
