# Hack to expose Java sources to java_library rules from other packages.
genrule(
    name = "context-srcjar",
    srcs = [],
    outs = ["context.srcjar"],
    cmd = "cp $(location :libcontext-src.jar) $@",
    tools = [":libcontext-src.jar"],
    visibility = ["//visibility:public"],
)

java_library(
    name = "context",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_code_findbugs_jsr305//jar",
        "@com_google_errorprone_error_prone_annotations//jar",
        "@com_google_guava_guava//jar",
    ],
)
